# z2z

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.MIT  README.md  build.zig  build.zig.zon  client-linux.cpp  client.cpp  execution.yml  server-linux  server.cpp  workspace.code-workspace
.github/: CODEOWNERS  SECURITY.md
cmake/: QtCommon.cmake
doc/css/: mylayout.css
src/: Client.h  ClientThread.cpp  ClientThread.h  HomieChat.pro  Main.cpp  Server.h  ServerThread.cpp  ServerThread.h  args.zig  client-linux.cpp  client.cpp  client.zig  main.zig  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.zig
src/_bsd/: server-linux.cpp
src/client/: ClientGui.cpp  ClientThread.cpp  ClientThread.h  ClientWindow.ui
src/net/: frame.zig
src/server/: ServerGui.cpp  ServerThread.cpp  ServerThread.h  ServerWindow.ui
